frontend/tests/cases/negative/splitting/lambda.gr
id : ∀ { a : Type } . a → a
id = λ x → {! x !}